Closed Bug 1687690 Opened 5 years ago Closed 5 years ago

Intermittent Assertion failure: isInside(oldData), at /builds/worker/checkouts/gecko/js/src/gc/Nursery.cpp:699 | crashed [@ js::Nursery::setIndirectForwardingPointer(void*, void*)]

Categories

(Core :: JavaScript: GC, defect)

defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox84 --- unaffected
firefox85 --- unaffected
firefox86 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: jonco)

References

(Regression)

Details

(Keywords: crash, intermittent-failure, regression)

Crash Data

Attachments

(1 file)

Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=327243517&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/W72Zy86bQsWawBwQShKKgw/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/W72Zy86bQsWawBwQShKKgw/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1


REFTEST TEST-START | layout/reftests/bidi/numeral/persian-5.html == layout/reftests/bidi/numeral/persian-5-ref.html
[task 2021-01-20T13:00:58.306Z] 13:00:58     INFO - REFTEST INFO | RESTORE PREFERENCE pref(bidi.numeral,0)
[task 2021-01-20T13:00:58.307Z] 13:00:58     INFO - REFTEST INFO | SET PREFERENCE pref(bidi.numeral,6)
[task 2021-01-20T13:00:58.307Z] 13:00:58     INFO - REFTEST TEST-LOAD | file:///Z:/task_1611145450/build/tests/reftest/tests/layout/reftests/bidi/numeral/persian-5.html | 119 / 120 (99%)
[task 2021-01-20T13:00:58.310Z] 13:00:58     INFO - [Child 6008, Main Thread] WARNING: Shouldn't call SchedulePaint in a detached pres context: file /builds/worker/checkouts/gecko/layout/generic/nsIFrame.cpp:7135
[task 2021-01-20T13:00:58.310Z] 13:00:58     INFO - [Child 6008, Main Thread] WARNING: Shouldn't call SchedulePaint in a detached pres context: file /builds/worker/checkouts/gecko/layout/generic/nsIFrame.cpp:7135
[task 2021-01-20T13:00:58.311Z] 13:00:58     INFO - [Child 6008, Main Thread] WARNING: Shouldn't call SchedulePaint in a detached pres context: file /builds/worker/checkouts/gecko/layout/generic/nsIFrame.cpp:7135
[task 2021-01-20T13:00:58.312Z] 13:00:58     INFO - [Child 6008, Main Thread] WARNING: Shouldn't call SchedulePaint in a detached pres context: file /builds/worker/checkouts/gecko/layout/generic/nsIFrame.cpp:7135
[task 2021-01-20T13:00:58.312Z] 13:00:58     INFO - [Child 6008, Main Thread] WARNING: Shouldn't call SchedulePaint in a detached pres context: file /builds/worker/checkouts/gecko/layout/generic/nsIFrame.cpp:7135
[task 2021-01-20T13:00:58.319Z] 13:00:58     INFO - [Child 6008, Main Thread] WARNING: Shouldn't call SchedulePaint in a detached pres context: file /builds/worker/checkouts/gecko/layout/generic/nsIFrame.cpp:7135
[task 2021-01-20T13:00:58.320Z] 13:00:58     INFO - [Child 6008, Main Thread] WARNING: Shouldn't call SchedulePaint in a detached pres context: file /builds/worker/checkouts/gecko/layout/generic/nsIFrame.cpp:7135
[task 2021-01-20T13:00:58.320Z] 13:00:58     INFO - [Child 6008, Main Thread] WARNING: Shouldn't call SchedulePaint in a detached pres context: file /builds/worker/checkouts/gecko/layout/generic/nsIFrame.cpp:7135
[task 2021-01-20T13:00:58.335Z] 13:00:58     INFO - [Child 6008, Main Thread] WARNING: NS_ENSURE_TRUE(browsingContext->IsContentSubframe()) failed: file /builds/worker/checkouts/gecko/dom/base/Document.cpp:3707
[task 2021-01-20T13:00:58.390Z] 13:00:58     INFO - REFTEST INFO | RESTORE PREFERENCE pref(bidi.numeral,0)
[task 2021-01-20T13:00:58.390Z] 13:00:58     INFO - REFTEST INFO | SET PREFERENCE pref(bidi.numeral,6)
...
 INFO - REFTEST TEST-PASS | layout/reftests/bidi/numeral/persian-5.html == layout/reftests/bidi/numeral/persian-5-ref.html | image comparison, max difference: 0, number of differing pixels: 0
[task 2021-01-20T13:00:58.468Z] 13:00:58     INFO - REFTEST TEST-END | layout/reftests/bidi/numeral/persian-5.html == layout/reftests/bidi/numeral/persian-5-ref.html
[task 2021-01-20T13:00:58.483Z] 13:00:58     INFO - [Child 6008, Main Thread] WARNING: NS_ENSURE_TRUE(browsingContext->IsContentSubframe()) failed: file /builds/worker/checkouts/gecko/dom/base/Document.cpp:3707
[task 2021-01-20T13:00:58.499Z] 13:00:58     INFO - REFTEST INFO | RESTORE PREFERENCE pref(bidi.numeral,0)
[task 2021-01-20T13:00:58.499Z] 13:00:58     INFO - REFTEST INFO | Slowest test took 393ms (file:///Z:/task_1611145450/build/tests/reftest/tests/layout/reftests/bidi/numeral/bug441782-5.html)
[task 2021-01-20T13:00:58.499Z] 13:00:58     INFO - REFTEST INFO | Total canvas count = 0
[task 2021-01-20T13:00:58.499Z] 13:00:58     INFO - [Child 6008, Main Thread] WARNING: Shouldn't call SchedulePaint in a detached pres context: file /builds/worker/checkouts/gecko/layout/generic/nsIFrame.cpp:7135
[task 2021-01-20T13:00:58.499Z] 13:00:58     INFO - [Child 6008, Main Thread] WARNING: Shouldn't call SchedulePaint in a detached pres context: file /builds/worker/checkouts/gecko/layout/generic/nsIFrame.cpp:7135
[task 2021-01-20T13:00:58.499Z] 13:00:58     INFO - [Child 6008, Main Thread] WARNING: Shouldn't call SchedulePaint in a detached pres context: file /builds/worker/checkouts/gecko/layout/generic/nsIFrame.cpp:7135
[task 2021-01-20T13:00:58.500Z] 13:00:58     INFO - [Child 6008, Main Thread] WARNING: Shouldn't call SchedulePaint in a detached pres context: file /builds/worker/checkouts/gecko/layout/generic/nsIFrame.cpp:7135
[task 2021-01-20T13:00:58.500Z] 13:00:58     INFO - [Child 6008, Main Thread] WARNING: Shouldn't call SchedulePaint in a detached pres context: file /builds/worker/checkouts/gecko/layout/generic/nsIFrame.cpp:7135
[task 2021-01-20T13:00:58.598Z] 13:00:58     INFO - [Child 5712, Main Thread] WARNING: '!CanSend() || !mManager || !mManager->CanSend()', file /builds/worker/checkouts/gecko/dom/ipc/jsactor/JSWindowActorChild.cpp:40
[task 2021-01-20T13:00:58.598Z] 13:00:58     INFO - [Child 5712, Main Thread] WARNING: '!CanSend() || !mManager || !mManager->CanSend()', file /builds/worker/checkouts/gecko/dom/ipc/jsactor/JSWindowActorChild.cpp:40
[task 2021-01-20T13:00:58.614Z] 13:00:58     INFO - [Child 5712, Main Thread] WARNING: '!CanSend() || !mManager || !mManager->CanSend()', file /builds/worker/checkouts/gecko/dom/ipc/jsactor/JSWindowActorChild.cpp:40
[task 2021-01-20T13:00:58.614Z] 13:00:58     INFO - [Child 5712, Main Thread] WARNING: '!CanSend() || !mManager || !mManager->CanSend()', file /builds/worker/checkouts/gecko/dom/ipc/jsactor/JSWindowActorChild.cpp:40
[task 2021-01-20T13:00:58.617Z] 13:00:58     INFO - [Child 5712, Main Thread] WARNING: '!CanSend() || !mManager || !mManager->CanSend()', file /builds/worker/checkouts/gecko/dom/ipc/jsactor/JSWindowActorChild.cpp:40
[task 2021-01-20T13:00:58.624Z] 13:00:58     INFO - [Child 5712, Main Thread] WARNING: '!CanSend() || !mManager || !mManager->CanSend()', file /builds/worker/checkouts/gecko/dom/ipc/jsactor/JSWindowActorChild.cpp:40
[task 2021-01-20T13:00:58.624Z] 13:00:58     INFO - [Child 5712, Main Thread] WARNING: '!CanSend() || !mManager || !mManager->CanSend()', file /builds/worker/checkouts/gecko/dom/ipc/jsactor/JSWindowActorChild.cpp:40
[task 2021-01-20T13:00:58.759Z] 13:00:58  WARNING - REFTEST WARNING | Failed to find the test-plugin.
[task 2021-01-20T13:00:58.760Z] 13:00:58  WARNING - REFTEST WARNING | Failed to find the test-plugin.
[task 2021-01-20T13:00:58.760Z] 13:00:58  WARNING - REFTEST WARNING | Failed to get test plugin tags.
[task 2021-01-20T13:00:58.760Z] 13:00:58     INFO - [Child 6008, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80040111 (NS_ERROR_NOT_AVAILABLE): file /builds/worker/checkouts/gecko/caps/BasePrincipal.cpp:1349
[task 2021-01-20T13:00:58.799Z] 13:00:58     INFO - ###!!! [Parent][RunMessage] Error: Channel closing: too late to send/recv, messages will be lost
[task 2021-01-20T13:00:58.834Z] 13:00:58     INFO - [Parent 5784, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80040111 (NS_ERROR_NOT_AVAILABLE): file /builds/worker/checkouts/gecko/netwerk/cache/nsApplicationCacheService.cpp:161
[task 2021-01-20T13:00:58.994Z] 13:00:58     INFO - [Child 5712, Main Thread] WARNING: Extra shutdown CC: 'i < NORMAL_SHUTDOWN_COLLECTIONS', file /builds/worker/checkouts/gecko/xpcom/base/nsCycleCollector.cpp:3364
[task 2021-01-20T13:00:59.014Z] 13:00:59     INFO - [Child 5712, Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /builds/worker/checkouts/gecko/modules/libpref/Preferences.cpp:4378
[task 2021-01-20T13:00:59.255Z] 13:00:59     INFO - ###!!! [Parent][RunMessage] Error: Channel closing: too late to send/recv, messages will be lost
[task 2021-01-20T13:00:59.290Z] 13:00:59     INFO - [Parent 5784, IPDL Background] WARNING: idb: '0.000000s: starting', file /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp:3998
[task 2021-01-20T13:00:59.291Z] 13:00:59     INFO - [Parent 5784, IPDL Background] WARNING: idb: '0.000000s: Live database entry removed', file /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp:3998
[task 2021-01-20T13:00:59.291Z] 13:00:59     INFO - [Parent 5784, IPDL Backgroun[Child 4d] W916A, Main ThreRadNING]: idb WA: '0.0000R0N0IsNG: Extr:a gLiveDa tabaseHashtable entrshuy remtdown CC: ov'i < NOed', fileR /builds/worker/checkouts/geckMoAL_SHUTDO/dom/quotWN_COLLECTIONS', file /builds/worker/checkouts/gecko/xpcom/base/nsCycleCollector.cpp:3364
[task 2021-01-20T13:00:59.291Z] 13:00:59     INFO - a/ActorsParent.cpp:3998
[Parent 5784, IPDL Background] WARNING: idb: '0.000000s: Live database entry removed', file /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp:3998
[task 2021-01-20T13:00:59.295Z] 13:00:59     INFO - [Parent 5784, IPDL Background] WARNING: idb: '0.000000s: gLiveDatabaseHashtable entry removed', file /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp:3998
[task 2021-01-20T13:00:59.296Z] 13:00:59     INFO - [Parent 5784, IPDL Background] WARNING: cache: '0.000000s: starting', file /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp:3998
[task 2021-01-20T13:00:59.296Z] 13:00:59     INFO - [Parent 5784, IPDL Background] WARNING: sdb: '0.016000s: starting', file /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp:3998
[task 2021-01-20T13:00:59.297Z] 13:00:59     INFO - [Parent 5784, IPDL Background] WARNING: ls: '0.016000s: starting', file /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp:3998
[task 2021-01-20T13:00:59.300Z] 13:00:59     INFO - [Parent 5784, IPDL Background] WARNING: idb: '0.016000s: Live database entry removed', file /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp:3998
[task 2021-01-20T13:00:59.300Z] 13:00:59     INFO - [Parent 5784, IPDL Background] WARNING: idb: '0.016000s: gLiveDatabaseHashtable entry removed', file /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp:3998
[task 2021-01-20T13:00:59.303Z] 13:00:59     INFO - [Parent 5784, IPDL Background] WARNING: idb: '0.016000s: Live database entry removed', file /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp:3998
[task 2021-01-20T13:00:59.303Z] 13:00:59     INFO - [Parent 5784, IPDL Background] WARNING: idb: '0.016000s: Live database entry removed', file /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp:3998
[task 2021-01-20T13:00:59.304Z] 13:00:59     INFO - [Parent 5784, IPDL Background] WARNING: idb: '0.016000s: gLiveDatabaseHashtable entry removed', file /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp:3998
[task 2021-01-20T13:00:59.305Z] 13:00:59     INFO - [Parent 5784, IPDL Background] WARNING: idb: '0.016000s: completed', file /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp:3998
[task 2021-01-20T13:00:59.308Z] 13:00:59     INFO - [Parent 5784, IPDL Background] WARNING: cache: '0.016000s: completed', file /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp:3998
[task 2021-01-20T13:00:59.308Z] 13:00:59     INFO - [Parent 5784, IPDL Background] WARNING: sdb: '0.016000s: completed', file /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp:3998
[task 2021-01-20T13:00:59.308Z] 13:00:59     INFO - [Parent 5784, IPDL Background] WARNING: ls: '0.016000s: completed', file /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp:3998
[task 2021-01-20T13:00:59.316Z] 13:00:59     INFO - [Child 4916, Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /builds/worker/checkouts/gecko/modules/libpref/Preferences.cpp:4378
[task 2021-01-20T13:00:59.355Z] 13:00:59     INFO - [Child 6008, Main Thread] WARNING: Extra shutdown CC: 'i < NORMAL_SHUTDOWN_COLLECTIONS', file /builds/worker/checkouts/gecko/xpcom/base/nsCycleCollector.cpp:3364
[task 2021-01-20T13:00:59.375Z] 13:00:59     INFO - [Child 6008, Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /builds/worker/checkouts/gecko/modules/libpref/Preferences.cpp:4378
[task 2021-01-20T13:00:59.642Z] 13:00:59     INFO - 1611147659633	Marionette	TRACE	Received observer notification xpcom-will-shutdown
[task 2021-01-20T13:00:59.642Z] 13:00:59     INFO - 1611147659634	Marionette	INFO	Stopped listening on port 2828
[task 2021-01-20T13:00:59.642Z] 13:00:59     INFO - 1611147659634	Marionette	DEBUG	Marionette stopped listening
[task 2021-01-20T13:00:59.658Z] 13:00:59     INFO - ###!!! [Child][RunMessage] Error: Channel closing: too late to send/recv, messages will be lost
[task 2021-01-20T13:00:59.678Z] 13:00:59     INFO - [RDD 2912, Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /builds/worker/checkouts/gecko/modules/libpref/Preferences.cpp:4378
[task 2021-01-20T13:00:59.693Z] 13:00:59     INFO - [GPU 4656, Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /builds/worker/checkouts/gecko/modules/libpref/Preferences.cpp:4378
[task 2021-01-20T13:01:00.595Z] 13:01:00     INFO - [Parent 5784, Main Thread] WARNING: Extra shutdown CC: 'i < NORMAL_SHUTDOWN_COLLECTIONS', file /builds/worker/checkouts/gecko/xpcom/base/nsCycleCollector.cpp:3364
[task 2021-01-20T13:01:00.642Z] 13:01:00     INFO - [Parent 5784, Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /builds/worker/checkouts/gecko/modules/libpref/Preferences.cpp:4378
[task 2021-01-20T13:01:00.757Z] 13:01:00     INFO - REFTEST INFO | Process mode: e10s
[task 2021-01-20T13:01:00.757Z] 13:01:00  WARNING - leakcheck | refcount logging is off, so leaks can't be detected!
[task 2021-01-20T13:01:00.757Z] 13:01:00     INFO - REFTEST INFO | Running tests in file:///Z:/task_1611145450/build/tests/reftest/tests/layout/reftests/datalist/reftest.list
[task 2021-01-20T13:01:00.812Z] 13:01:00     INFO - REFTEST INFO | Running with e10s: True
[task 2021-01-20T13:01:00.812Z] 13:01:00     INFO - REFTEST INFO | Running with fission: False
[task 2021-01-20T13:01:00.812Z] 13:01:00     INFO - REFTEST INFO | Application command: Z:\task_1611145450\build\application\firefox\firefox.exe -marionette --wait-for-browser -profile c:\users\task_1611145450\appdata\local\temp\tmpnm4nzk.mozrunner
[task 2021-01-20T13:01:00.955Z] 13:01:00     INFO - ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to c:\users\task_1611145450\appdata\local\temp\tmpnm4nzk.mozrunner\runreftest_leaks.log
[task 2021-01-20T13:01:00.955Z] 13:01:00     INFO - [6076, Main Thread] WARNING: XPCOM_MEM_BLOAT_LOG is set, disabling native allocations.: file /builds/worker/checkouts/gecko/tools/profiler/core/platform.cpp:251
[task 2021-01-20T13:01:02.098Z] 13:01:02     INFO - Assertion failure: isInside(oldData), at /builds/worker/checkouts/gecko/js/src/gc/Nursery.cpp:699
[task 2021-01-20T13:04:00.837Z] 13:04:00    ERROR - TEST-UNEXPECTED-FAIL | Last test finished | application terminated with exit code 1
 REFTEST INFO | Copy/paste: Z:/task_1611145450/fetches\minidump_stackwalk\minidump_stackwalk.exe c:\users\task_1611145450\appdata\local\temp\tmpnm4nzk.mozrunner\minidumps\57ab1a47-9eba-4de5-81dc-86f2c8575ec1.dmp Z:\task_1611145450\build\symbols
[task 2021-01-20T13:04:30.959Z] 13:04:30     INFO - REFTEST INFO | Saved minidump as Z:\task_1611145450\build\blobber_upload_dir\57ab1a47-9eba-4de5-81dc-86f2c8575ec1.dmp
[task 2021-01-20T13:04:30.962Z] 13:04:30     INFO - REFTEST INFO | Saved app info as Z:\task_1611145450\build\blobber_upload_dir\57ab1a47-9eba-4de5-81dc-86f2c8575ec1.extra
[task 2021-01-20T13:04:31.059Z] 13:04:31     INFO - REFTEST PROCESS-CRASH | Last test finished | application crashed [@ js::Nursery::setIndirectForwardingPointer(void*, void*)]
[task 2021-01-20T13:04:31.059Z] 13:04:31     INFO - Mozilla crash reason: MOZ_ASSERT(isInside(oldData))
[task 2021-01-20T13:04:31.059Z] 13:04:31     INFO - Crash dump filename: c:\users\task_1611145450\appdata\local\temp\tmpnm4nzk.mozrunner\minidumps\57ab1a47-9eba-4de5-81dc-86f2c8575ec1.dmp
[task 2021-01-20T13:04:31.060Z] 13:04:31     INFO - Operating system: Windows NT
[task 2021-01-20T13:04:31.060Z] 13:04:31     INFO -                   6.1.7601 Service Pack 1
[task 2021-01-20T13:04:31.060Z] 13:04:31     INFO - CPU: x86
[task 2021-01-20T13:04:31.060Z] 13:04:31     INFO -      GenuineIntel family 6 model 62 stepping 4
[task 2021-01-20T13:04:31.060Z] 13:04:31     INFO -      8 CPUs
[task 2021-01-20T13:04:31.060Z] 13:04:31     INFO - 
[task 2021-01-20T13:04:31.060Z] 13:04:31     INFO - GPU: UNKNOWN
[task 2021-01-20T13:04:31.060Z] 13:04:31     INFO - 
[task 2021-01-20T13:04:31.060Z] 13:04:31     INFO - Crash reason:  EXCEPTION_BREAKPOINT
[task 2021-01-20T13:04:31.060Z] 13:04:31     INFO - Crash address: 0x5866790c
[task 2021-01-20T13:04:31.060Z] 13:04:31     INFO - Process uptime: 2 seconds
[task 2021-01-20T13:04:31.061Z] 13:04:31     INFO - 
[task 2021-01-20T13:04:31.061Z] 13:04:31     INFO - Thread 0 (crashed)
0  xul.dll!js::Nursery::setIndirectForwardingPointer(void*, void*) [Nursery.cpp:f786edb318188d2a20f1b262c262413bb7c8fa49 : 699 + 0x0]
[task 2021-01-20T13:04:31.061Z] 13:04:31     INFO -     eip = 0x5866790c   esp = 0x003ab1c8   ebp = 0x003ab1ec   ebx = 0x00100000
[task 2021-01-20T13:04:31.061Z] 13:04:31     INFO -     esi = 0x024380c0   edi = 0x00000000   eax = 0x6adfd5f0   ecx = 0x000002bb
[task 2021-01-20T13:04:31.061Z] 13:04:31     INFO -     edx = 0x6a82e340   efl = 0x00000202
[task 2021-01-20T13:04:31.061Z] 13:04:31     INFO -     Found by: given as instruction pointer in context
[task 2021-01-20T13:04:31.061Z] 13:04:31     INFO -  1  xul.dll!js::TenuringTracer::moveElementsToTenured(js::NativeObject*, js::NativeObject*, js::gc::AllocKind) [Marking.cpp:f786edb318188d2a20f1b262c262413bb7c8fa49 : 3377 + 0x1c]
[task 2021-01-20T13:04:31.061Z] 13:04:31     INFO -     eip = 0x5865ff56   esp = 0x003ab1f4   ebp = 0x003ab228   ebx = 0x113132e0
[task 2021-01-20T13:04:31.061Z] 13:04:31     INFO -     esi = 0x123ffff0   edi = 0x00000010
[task 2021-01-20T13:04:31.061Z] 13:04:31     INFO -     Found by: call frame info
...
Summary: Intermittent Last test finished | application crashed [@ js::Nursery::setIndirectForwardingPointer(void*, void*)] | application terminated with exit code 1 → Intermittent Assertion failure: isInside(oldData), at /builds/worker/checkouts/gecko/js/src/gc/Nursery.cpp:699 | crashed [@ js::Nursery::setIndirectForwardingPointer(void*, void*)]

Hi Jon, can this be a fallout of 1686219 ?

Flags: needinfo?(jcoppeard)

Yes that's possible.

Flags: needinfo?(jcoppeard)
Assignee: nobody → jcoppeard
Regressed by: 1686219
Has Regression Range: --- → yes
Keywords: regression

I'm not 100% sure that this is the problem but it seems plausible.

Pushed by jcoppeard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/902e72cc89ff Relax assertion now that tenured heap objects can live at the end of chunks r=sfink

Set release status flags based on info from the regressing bug 1686219

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: