Bug 1687690 - Relax assertion now that tenured heap objects can live at the end of chunks r=sfink

I'm not 100% sure that this is the problem but it seems plausible.

Differential Revision: https://phabricator.services.mozilla.com/D102424